--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "ngx-owl-carousel": "^2.0.7",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
